--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SpaceX</string>
+    <string name="error_no_data">No data available</string>
     <string name="error_unexpected">Unexpected error</string>
+    <string name="mission_name_format">#%1$d %2$s</string>
 </resources>
