--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SpaceX</string>
     <string name="error_no_data">No data available</string>
     <string name="error_unexpected">Unexpected error</string>
+    <string name="details_placeholder">No details to display</string>
     <string name="mission_name_format">#%1$d %2$s</string>
     <string name="launch_date_label">Date: %s</string>
     <string name="launch_site_label">Location: %s</string>
